--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -103,6 +103,7 @@
 
             <md-button md-theme="{{themePrimaryButtons}}" class="md-raised md-primary"
                        style="min-height: 100%; max-width: 31px; min-width: 31px; margin-left: 4px;"
+                       ng-show="$root.currentUser.req_role === 'lead_operator'"
                        ng-click="vm.assignSelectedResources(subarray);" title="Assign Resources to Subarray">
                 <md-icon class="fa" md-font-icon="fa-chevron-left" style="width: auto; height: auto;"></md-icon>
             </md-button>
@@ -113,15 +114,16 @@
         </div>
     </div>
 
-    <div flex layout="column" style="max-width:280px; min-height: 500px; margin-right: 16px; margin-bottom: 4px;">
+    <div flex layout="column" style="max-width:280px; min-height: 500px; margin-right: 16px; margin-bottom: 4px;"
+         ng-show="$root.currentUser.req_role === 'lead_operator'">
 
         <div flex layout="column" class="md-whiteframe-z2" style="margin-bottom: 8px;">
             <md-toolbar ng-init="vm.selectAll = false" class="md-whiteframe-z1" layout="row" layout-align="start center" title="" style="max-height: 40px; min-height: 40px;">
                 <span style="font-size: 10px; position: absolute; left: 1px; bottom: -2px;" title="Resources in Maintenance">Maint.</span>
                 <span style="font-size: 10px; position: absolute; left: 32px; bottom: -2px;" title="Resources Marked as Faulty">Faulty</span>
-                <span flex class="md-toolbar-tools unselectable" style="cursor: pointer; max-height: 32px;"
-                      ng-click="vm.selectAllUnassignedResources(vm.selectAll = !vm.selectAll)">Resources</span>
-                <input class="search-input-box" type="search"
+                <span flex class="md-toolbar-tools unselectable" style="cursor: pointer; max-height: 32px; padding: 0 4px"
+                      ng-click="vm.selectAllUnassignedResources(vm.selectAll = !vm.selectAll)">Free Resources</span>
+                <input class="search-input-box" type="search" style="width: 110px;"
                        ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Resources..."/>
             </md-toolbar>
 
