--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -65,21 +65,21 @@
     <div class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}" style="overflow: auto; margin-bottom: 8px;">
         <div ng-repeat="key in $root.objectKeys(vm.resourcesNames) | orderBy:key track by key"
              class="process-control-container">
-            <div flex ng-click="vm.resourcesNames[key].showDetails = !vm.resourcesNames[key].showDetails" role="heading"
+            <div flex role="heading"
                  ng-init="vm.resourcesNames[key].showDetails = false"
                  class="process-control-bg-transition md-whiteframe-z1"
-                 style="padding: 6px;" layout="row" layout-align="start center"
+                 style="padding: 6px; height: 32px" layout="row" layout-align="start center"
                  ng-class="{'bg-light-grey-0-3': vm.resourcesNames[key].showDetails}">
-                <span ng-show="!vm.resourcesNames[key].connected" class="red-color" style="width: 160px; margin: 0;"><b>{{::key
-                    | uppercase}}</b></span>
-                <span ng-show="vm.resourcesNames[key].connected" class="green-color"
-                      style="width: 160px; margin: 0;"><b>{{::key | uppercase}}</b></span>
+                <span style="width: 160px; margin: 0; text-align: left" ng-click="vm.resourcesNames[key].showDetails = !vm.resourcesNames[key].showDetails">
+                    <span ng-show="!vm.resourcesNames[key].connected" class="red-color"><b>{{::key | uppercase}}</b></span>
+                    <span ng-show="vm.resourcesNames[key].connected" class="green-color"><b>{{::key | uppercase}}</b></span>
+                </span>
                 <span>{{::vm.resourcesNames[key].host}}</span>
                 <span style="width: 38px; margin: 0">:{{::vm.resourcesNames[key].port}}</span>
                 <span style="width: 180px;"><i>{{::vm.resourcesNames[key].api_version}}</i></span>
                 <span flex><i>{{::vm.resourcesNames[key].build_state}}</i></span>
 
-                <div layout="row" style="position: absolute; right: 0; top: 0">
+                <div layout="row">
                     <md-switch ng-if="vm.resourcesNames[key].sensors.logging_katcpmsgs_devices_enabled"
                                ng-click="$event.stopPropagation()"
                                ng-change="vm.toggleKATCPMessageDevices(key, vm.resourcesNames[key].sensors.logging_katcpmsgs_devices_enabled.value)"
