--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -1,27 +1,51 @@
-<div flex layout="row" style="min-width: 1015px; min-height: 920px; margin-top: 4px;" ng-controller="SubArrayExecutorOverview as vm">
+<div flex layout="column" style="min-width: 1015px; min-height: 920px; margin-top: 8px;"
+     ng-controller="SubArrayExecutorOverview as vm">
 
-    <div flex layout="column" style="overflow: auto; padding-left: 8px; padding-right: 8px;">
-        <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2" layout="row" layout-align="start" flex
-             style="min-width: 650px;">
+    <div layout="row" layout-align="center center" style="margin: 0 8px" md-theme="{{themePrimaryButtons}}">
+        <md-button style="margin: 0"
+                   title="Schedule Block Drafts"
+                   ng-click="$root.stateGo('scheduler.drafts')">
+            <span>SB Drafts</span>
+        </md-button>
+        <span flex></span>
+        <md-button class="md-primary md-raised" style="margin: 0"
+                   ng-click="$root.stateGo('scheduler')">
+            <span>Subarrays Workflow</span>
+        </md-button>
+        <span flex></span>
+        <md-button style="border: 8px solid #4CAF50; border-radius: 4px; margin: -1px" title="All Subarrays Observations Overview"
+                   ng-click="$root.stateGo('scheduler.observations')">
+            <span>Obs Overview</span>
+        </md-button>
+    </div>
 
-            <div class="" style="margin-left: 0;" layout="column" layout-align="start" flex>
+    <div flex layout="row" style="margin-top: 8px">
+        <div flex layout="column" style="overflow: auto; padding-left: 8px; padding-right: 8px;">
+            <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2"
+                 layout="row" layout-align="start" flex
+                 style="min-width: 650px;">
 
-                <md-toolbar md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
-                            class="md-whiteframe-z1" ng-class="{'md-hue-2': subarray.state !== 'inactive'}">
-                    <span style="position: absolute; left: 8px; top: 8px;">SUBARRAY {{subarray.id}}</span>
-                    <md-button flex layout="row" style="min-height: 42px; max-height: 42px;" class="unselectable" ng-click="vm.navigateToSchedulerDetails(subarray.id)"
-                               title="Click to Manage Observations for Subarray {{subarray.id}}">
-                        <span>{{subarray.state}}</span>
-                        <span ng-if="subarray.maintenance">{{", in maintenance"}}</span>
-                    </md-button>
-                    <div layout="row" style="position: absolute; top: 0; right: 0; font-size: 14px; padding: 0">
-                        <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
-                        <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band}}</b></span>
-                        <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product}}</b></span>
-                        <span ng-show="subarray.state === 'active' || subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{subarray.config_label}}</b></span>
-                    </div>
-                    <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
-                         style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
+                <div class="" style="margin-left: 0;" layout="column" layout-align="start" flex>
+
+                    <md-toolbar
+                        md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
+                        class="md-whiteframe-z1" ng-class="{'md-hue-2': subarray.state !== 'inactive'}">
+                        <span style="position: absolute; left: 8px; top: 8px;">SUBARRAY {{subarray.id}}</span>
+                        <md-button flex layout="row" style="min-height: 42px; max-height: 42px;" class="unselectable"
+                                   ng-click="vm.navigateToSchedulerDetails(subarray.id)"
+                                   title="Click to Manage Observations for Subarray {{subarray.id}}">
+                            <span>{{subarray.state}}</span>
+                            <span ng-if="subarray.maintenance">{{", in maintenance"}}</span>
+                        </md-button>
+                        <div layout="row" style="position: absolute; top: 0; right: 0; font-size: 14px; padding: 0">
+                            <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
+                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band}}</b></span>
+                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product}}</b></span>
+                            <span ng-show="subarray.state === 'active' || subarray.config_label"
+                                  title="Config Label"><i>Config Label: </i><b>{{subarray.config_label}}</b></span>
+                        </div>
+                        <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
+                             style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
                             <span style="width: 125px" class="subheader-text">
                                 <span>ID</span>
                             </span>
@@ -43,34 +67,39 @@
                             <span style="width: 150px" class="subheader-text">
                                 <span>Desired Time</span>
                             </span>
-                    </div>
+                        </div>
 
-                </md-toolbar>
-                <div flex class="schedule-draft-data-list" ng-class="{'maintenance-bg':subarray.maintenance}">
-                    <div style="padding: 0 4px"
-                         ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id} track by item.id"
-                         class="schedule-draft-item animate-repeat" layout="column">
-                        <div flex layout="row" layout-align="start center">
-                            <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary"
-                                                md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}" value="{{item.progress}}"
-                                                style="position: absolute; left: 0; right: 0; margin-top: -5px;">
-                            </md-progress-linear>
-                            <div layout="column" layout-align="start" style="padding-top: 4px; width: 120px">
-                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      style="font-size: 14px; font-weight: bold"
-                                      ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
+                    </md-toolbar>
+                    <div flex class="schedule-draft-data-list" ng-class="{'maintenance-bg':subarray.maintenance}">
+                        <div style="padding: 0 4px"
+                             ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id} track by item.id"
+                             class="schedule-draft-item animate-repeat" layout="column">
+                            <div flex layout="row" layout-align="start center">
+                                <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary"
+                                                    md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}"
+                                                    value="{{item.progress}}"
+                                                    style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                                </md-progress-linear>
+                                <div layout="column" layout-align="start" style="padding-top: 4px; width: 120px">
+                                <span
+                                    ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                    style="font-size: 14px; font-weight: bold"
+                                    ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
                                 </span>
-                                <span><i>{{item.owner}}</i></span>
-                            </div>
-                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
+                                    <span><i>{{item.owner}}</i></span>
+                                </div>
+                                <span flex style="overflow: hidden; text-overflow: ellipsis;"
+                                      title="{{::item.description}}">{{::item.description}}</span>
 
-                            <span style="width: 150px">{{item.verification_state}}</span>
-                            <span style="width: 150px" ng-class="{'green-color': item.state === 'ACTIVE'}">{{item.state}}</span>
+                                <span style="width: 150px">{{item.verification_state}}</span>
+                                <span style="width: 150px" ng-class="{'green-color': item.state === 'ACTIVE'}">{{item.state}}</span>
                             <span style="width: 75px"
                                   ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
-                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                  style="text-transform: uppercase; width: 105px">{{item.type}}</span>
-                            <span style="width: 140px;">{{item.desired_start_time}}</span>
+                            <span
+                                ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                style="text-transform: uppercase; width: 105px">{{item.type}}</span>
+                                <span style="width: 140px;">{{item.desired_start_time}}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
