--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -37,12 +37,12 @@
             </div>
             <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 1; border: 0;"
                  layout="row" layout-align="start center">
-                <span style="width: 26px;" class="subheader-text" ng-click="vm.setAlarmsOrderBy('severity')">
-                    <span style="padding: 8px"></span>
+                <span style="width: 60px;" class="subheader-text" ng-click="vm.setAlarmsOrderBy('severity_value')">
+                    <span style="">Severity</span>
                     <span class="fa"
-                          ng-class="{'fa-caret-up': vm.alarmsOrderBy.value === 'severity' && !vm.alarmsOrderBy.reverse, 'fa-caret-down': vm.alarmsOrderBy.value === 'severity' && vm.alarmsOrderBy.reverse}"></span>
+                          ng-class="{'fa-caret-up': vm.alarmsOrderBy.value === 'severity_value' && !vm.alarmsOrderBy.reverse, 'fa-caret-down': vm.alarmsOrderBy.value === 'severity_value' && vm.alarmsOrderBy.reverse}"></span>
                 </span>
-                <span style="width: 168px;" class="subheader-text" ng-click="vm.setAlarmsOrderBy('timestamp')">
+                <span style="width: 172px;" class="subheader-text" ng-click="vm.setAlarmsOrderBy('timestamp')">
                     <span>Date Changed</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.alarmsOrderBy.value === 'timestamp' && !vm.alarmsOrderBy.reverse, 'fa-caret-down': vm.alarmsOrderBy.value === 'timestamp' && vm.alarmsOrderBy.reverse}"></span>
@@ -67,10 +67,9 @@
         </md-toolbar>
         <div flex class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
             <div
-                ng-repeat="item in filteredAlarms = ($root.alarmsData | alarmsFilter:vm.showClearedAlarms | regexSearch:vm.alarmsOrderByFields:vm.q | orderBy:vm.alarmsOrderBy.value:vm.alarmsOrderBy.reverse)"
+                ng-repeat="item in filteredAlarms = ($root.alarmsData | alarmsFilter:vm.showClearedAlarms | regexSearch:vm.alarmsOrderByFields:vm.q | orderBy:'timestamp' | orderBy:vm.alarmsOrderBy.value:vm.alarmsOrderBy.reverse) track by $index"
                 class="animate-repeat-opacity">
                 <div ng-click="item.selected = !item.selected;" class="alarm-row-item"
-
                      ng-switch="item.severity" layout="row" layout-align="start center"
                      ng-class="{'alarm-list-item-badge-warn': item.severity === 'warn',
                     'alarm-list-item-badge-error': item.severity === 'error',
@@ -202,7 +201,7 @@
 
         <div ng-show="vm.showKnownAlarmsList" flex class="alarms-list" ng-click="vm.selectAllKnownAlarms = false">
             <div
-                ng-repeat="item in filteredKnownAlarms = ($root.alarmsData | alarmsKnownFilter:vm.showKnownNominalAlarms:vm.showKnownMaintenanceAlarms | regexSearch:vm.knownAlarmsOrderByFields:vm.q2 | orderBy:vm.knownAlarmsOrderBy.value:vm.knownAlarmsOrderBy.reverse)"
+                ng-repeat="item in filteredKnownAlarms = ($root.alarmsData | alarmsKnownFilter:vm.showKnownNominalAlarms:vm.showKnownMaintenanceAlarms | regexSearch:vm.knownAlarmsOrderByFields:vm.q2 | orderBy:'timestamp' | orderBy:vm.knownAlarmsOrderBy.value:vm.knownAlarmsOrderBy.reverse) track by $index"
                 class="animate-repeat-opacity">
                 <div ng-click="item.selected = !item.selected" flex class="alarm-row-item"
                      ng-switch="item.severity" layout="row" layout-align="start center"
