--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -67,7 +67,7 @@
         </md-toolbar>
         <div flex class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
             <div
-                ng-repeat="item in filteredAlarms = ($root.alarmsData | alarmsFilter:vm.showClearedAlarms | regexSearch:vm.alarmsOrderByFields:vm.q | orderBy:'timestamp' | orderBy:vm.alarmsOrderBy.value:vm.alarmsOrderBy.reverse) track by $index"
+                ng-repeat="item in filteredAlarms = ($root.alarmsData | alarmsFilter:vm.showClearedAlarms | regexSearch:vm.alarmsOrderByFields:vm.q | orderBy:'timestamp':true | orderBy:vm.alarmsOrderBy.value:vm.alarmsOrderBy.reverse) track by $index"
                 class="animate-repeat-opacity">
                 <div ng-click="item.selected = !item.selected;" class="alarm-row-item"
                      ng-switch="item.severity" layout="row" layout-align="start center"
@@ -201,7 +201,7 @@
 
         <div ng-show="vm.showKnownAlarmsList" flex class="alarms-list" ng-click="vm.selectAllKnownAlarms = false">
             <div
-                ng-repeat="item in filteredKnownAlarms = ($root.alarmsData | alarmsKnownFilter:vm.showKnownNominalAlarms:vm.showKnownMaintenanceAlarms | regexSearch:vm.knownAlarmsOrderByFields:vm.q2 | orderBy:'timestamp' | orderBy:vm.knownAlarmsOrderBy.value:vm.knownAlarmsOrderBy.reverse) track by $index"
+                ng-repeat="item in filteredKnownAlarms = ($root.alarmsData | alarmsKnownFilter:vm.showKnownNominalAlarms:vm.showKnownMaintenanceAlarms | regexSearch:vm.knownAlarmsOrderByFields:vm.q2 | orderBy:'timestamp':true | orderBy:vm.knownAlarmsOrderBy.value:vm.knownAlarmsOrderBy.reverse) track by $index"
                 class="animate-repeat-opacity">
                 <div ng-click="item.selected = !item.selected" flex class="alarm-row-item"
                      ng-switch="item.severity" layout="row" layout-align="start center"
